@@ -14,6 +14,16 @@ Changes from 2.2 to 2.2.1rc1
   leads to space savings up to 3x and time improvements up to 30x.
   Closes #301.
 
+- The `Row` accessor implements a new `__contains__` special method that
+  allows doing things like::
+
+    for row in table:
+        if item in row:
+            print "Value found in row", row.nrow
+            break
+
+  Closes #309.
+
 - tables.Expr can perform operations on scalars now.  Thanks to Gaëtan
   de Menten for providing a patch for this.  Closes #287.
 
